tests/test-files/parse-and.txt
================================================================================
100 Malformed and expression
================================================================================

(package test-package)

(define x (and))

--------------------------------------------------------------------------------

error: Malformed and expression
  --> test:3:14
   |
 3 |  (define x (and))
   |                ^ expected one or more arguments
